add some structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Kickass
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jordan Belford</title>
+</head>
+
+<body>
+    <head>
+    </header>
+
+    <section>
+        <p>Hi, my name is Jordan Belford</p>
+    </section>
+
+    <footer>
+    </footer>
+
+</body>
+
+</html>
